--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node backend/server",
     "server": "nodemon backend/server.js --watch backend -e js,json",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "data:import": "node backend/seeder -i",
+    "data:destroy": "node backend/seeder.js -d"
   },
   "repository": {
     "type": "git",
